@@ -8,8 +8,9 @@ import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import java.util.Collection;
-import java.util.List;
+
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "users")
@@ -33,23 +34,31 @@ public class User implements UserDetails {
     @Column(nullable = false)
     private String password;
 
-    @Enumerated(EnumType.STRING)
-    @Column(nullable = false)
-    private Role role = Role.USER;
+    @ManyToMany(mappedBy = "users" ,fetch = FetchType.LAZY)
+    private Set<Group> groups = new HashSet<>();;
 
     // Constructor واضح وصريح للـ Registration بس
-    public User(String username, String email, String password) {
+    public User(String username, String email, String password ) {
         this.username = username;
         this.email = email;
         this.password = password;
-        this.role = Role.USER;
+        this.groups = new HashSet<>();
     }
 
     // ── UserDetails interface ──────────────────────────────────────────────────
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
+        // إذا لم يكن لدى المستخدم أي مجموعات، نرجع قائمة فارغة تجنباً للـ NullPointerException
+        if (this.groups == null) {
+            return Collections.emptyList();
+        }
+
+        // المرور على المجموعات واستخراج الصلاحيات منها
+        return this.groups.stream()
+                .flatMap(group -> group.getPermissions().stream())
+                .map(permission -> new SimpleGrantedAuthority(permission.getName()))
+                .collect(Collectors.toSet());
     }
 
     @Override public String getPassword()               { return password; }
@@ -58,4 +67,4 @@ public class User implements UserDetails {
     @Override public boolean isAccountNonLocked()       { return true; }
     @Override public boolean isCredentialsNonExpired()  { return true; }
     @Override public boolean isEnabled()                { return true; }
-}
+}
